--- a/package.json
+++ b/package.json
@@ -1,6 +1,10 @@
 {
   "name": "air-app",
   "version": "0.0.0",
+  "engines": {
+    "node": "10.15.x",
+    "npm": "6.8.x"
+  },
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
