--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "name": "air-app",
-  "version": "0.0.0",
+  "version": "1.0.0",
   "engines": {
     "node": "10.15.x",
     "npm": "6.8.x"
   },
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
+    "start": "node server.js",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
@@ -15,9 +15,9 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/cli": "~8.3.25",
     "@angular/animations": "~8.2.14",
     "@angular/cdk": "~8.2.3",
+    "@angular/cli": "~8.3.25",
     "@angular/common": "~8.2.14",
     "@angular/compiler": "~8.2.14",
     "@angular/core": "~8.2.14",
@@ -30,7 +30,9 @@
     "@ngx-translate/core": "^12.1.2",
     "@ngx-translate/http-loader": "^4.0.0",
     "core-js": "^2.5.4",
+    "express": "^4.17.1",
     "hammerjs": "^2.0.8",
+    "path": "^0.12.7",
     "rxjs": "~6.5.4",
     "tslib": "^1.9.0",
     "zone.js": "~0.9.1"
