--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "scripts": {
     "ng": "ng",
     "start": "node server.js",
-    "build": "ng b --prod --aot=false --build-optimizer=false",
+    "build": "ng build --prod --aot=false --build-optimizer=false",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e"
